--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <header class="header">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-sm-12">
           <div class="home-title-card">
             <h1 class="title_intro">Hi! I'm</h1>
             <div class="title_name">
@@ -268,13 +268,18 @@
   <footer class="footer">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-6">
           <h5>About</h5>
+          <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         </div>
       </div>
     </div>
   </footer>
+  <section class="footer-bar">
+    © 2022 Mubashir Angathil , All Rights Reserved.
 
+
+  </section>
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
